syntax = "proto3";
package calculate;

service Calculate {
  rpc Add (BinaryRequest) returns (ResultResponse);
  rpc Minus (BinaryRequest) returns (ResultResponse);
}

message UnaryRequest {
  int32 operand = 1;
}

message BinaryRequest {
  int32 operand_first = 1;
  int32 operand_second = 2;

}

message ResultResponse {
  int32 result = 1;
}